2005-12-29 jerome
* update Resource_zGetInventory(List) to take into account changes in the stock table.
* bug fix: Organisation default currency is "price_currency". updated Organisation_viewDetails.

2005-12-29 aurel
* add new forms for Business Template to manage new properties and nw upgrade way
* define Business Template actions in order to update them easily
* save and exportof Business Template are now object_exchange

2005-12-28 jerome
* bug fix form_view and dialog_master for i18n

2005-12-22 yo
* Add an optional parameter passive_commit to InventoryModule_reindexMovementList and ERP5Site_reindexAll. passive_commit is passed to reindexObject and recursiveReindexObject.
* index_html does load local_pt any longer, but directly defines slots.

2005-12-21 Kevin
* "Section Category" in AccountingPreferences_view is no longer required.
* Display None category in Section Category list of Preference_view form.
* Add default_site_preference from erp5_accounting.

2005-12-20 jerome
* replace id by reference for Currency Code in the UI.

2005-12-20 yo
* Add an optional parameter sql_catalog_id into ERP5Site_reindexAll, ERP5Site_updateTranslationTable, and InventoryModule_reindexMovementList, and pass sql_catalog_id to catalog methods.
* ERP5Site_updateTranslationTable does not use Translation_addMessage or Translation_delete any longer. Instead, use portal_catalog.
* Remove Translation_addMessage and Translation_delete.

2005-12-19 Seb
* added sub_variation_text in Resource_zGetInventoryList
* added category type 'sub_variation' on
BaseCategory_view

2005-12-19 Jerome
* fix omit_input / omit_output in Resource_zStatInventory.

2005-12-18 yo
* Add License and Copyright to BusinessTemplate_view.
* Write the license and the copyright of this template.

2005-12-18 yo
* The portal type Preference does not need to specify PropertySheets in the portal type, since they are defined in the product.
* Add skins and actions for repository support.

2005-12-18: jérome