@@ -91,6 +91,12 @@ context.portal_templates.reindexObject(tag=\'module\', sql_catalog_id=sql_catalo
 for o in list(context.portal_templates.objectValues()):\n
   o.reindexObject(after_tag=(\'module\',\'category\'),tag=\'document\',priority=2, sql_catalog_id=sql_catalog_id, passive_commit=passive_commit)\n
 \n
+# Next we index trash bins\n
+print "#### Indexing trash bins ####"\n
+context.portal_trash.reindexObject(tag=\'module\', sql_catalog_id=sql_catalog_id, passive_commit=passive_commit)\n
+for o in list(context.portal_trash.objectValues()):\n
+  o.reindexObject(after_tag=(\'module\',\'category\'),tag=\'document\',priority=2, sql_catalog_id=sql_catalog_id, passive_commit=passive_commit)\n
+\n
 # Next we index applied rules\n
 print "#### Indexing applied rules ####"\n
 context.portal_rules.reindexObject(tag=\'module\', sql_catalog_id=sql_catalog_id, passive_commit=passive_commit)\n
@@ -139,7 +145,7 @@ return printed\n
         <item>
             <key> <string>_code</string> </key>
             <value> <string encoding="base64">YwAAAAAAAAAAAwAAAEAAAABzEwAAAGUAAGQBAGQCAIQCAFoBAGQAAFMoAwAAAE5pAQAAAGMCAAAA
-DAAAAGwAAABDAAAAc9gGAAB0AACDAAB9AwB8AwAEZAEAAklKdAIAdAMAZAIAgwIAZAMAfAAAgwAB
+DAAAAHYAAABDAAAAc3MHAAB0AACDAAB9AwB8AwAEZAEAAklKdAIAdAMAZAIAgwIAZAMAfAAAgwAB
 AXwDAARkBAACSUp0AgB0AgB0AwBkBQCDAgBkBgCDAgBkBwBkCABkAwB8AABkCQB8AQCDAAMBeFcA
 dAYAdAcAdAIAdAIAdAMAZAUAgwIAZAoAgwIAgwAAgwEAgwEARF0uAH0IAHQCAHwIAGQLAIMCAGQM
 AGQIAGQHAGQNAGQDAHwAAGQJAHwBAIMABAFxhgBXfAMABGQOAAJJSnQCAHQCAHQDAGQPAIMCAGQG
@@ -152,51 +158,55 @@ AAUBcbYBV3wDAARkFwACSUp0AgB0AgB0AwBkGACDAgBkBgCDAgBkBwBkCABkAwB8AABkCQB8AQCD
 AAMBeGMAdAYAdAcAdAIAdAIAdAMAZBgAgwIAZAoAgwIAgwAAgwEAgwEARF06AH0IAHQCAHwIAGQG
 AIMCAGQMAGQIAGQNAGYCAGQHAGQQAGQRAGQSAGQDAHwAAGQJAHwBAIMABQFxVAJXfAMABGQZAAJJ
 SnQCAHQCAHQDAGQaAIMCAGQGAIMCAGQHAGQIAGQDAHwAAGQJAHwBAIMAAwF4YwB0BgB0BwB0AgB0
-AgB0AwBkGgCDAgBkCgCDAgCDAACDAQCDAQBEXToAfQgAdAIAfAgAZAsAgwIAZAwAZAgAZA0AZgIA
+AgB0AwBkGgCDAgBkCgCDAgCDAACDAQCDAQBEXToAfQgAdAIAfAgAZAYAgwIAZAwAZAgAZA0AZgIA
 ZAcAZBAAZBEAZBIAZAMAfAAAZAkAfAEAgwAFAXHvAld8AwAEZBsAAklKdAIAdAIAdAMAZBwAgwIA
 ZAYAgwIAZAcAZAgAZAMAfAAAZAkAfAEAgwADAXhjAHQGAHQHAHQCAHQCAHQDAGQcAIMCAGQKAIMC
-AIMAAIMBAIMBAERdOgB9CAB0AgB8CABkBgCDAgBkDABkCABkDQBmAgBkBwBkEABkEQBkEgBkAwB8
+AIMAAIMBAIMBAERdOgB9CAB0AgB8CABkCwCDAgBkDABkCABkDQBmAgBkBwBkEABkEQBkEgBkAwB8
 AABkCQB8AQCDAAUBcYoDV3wDAARkHQACSUp0AgB0AgB0AwBkHgCDAgBkBgCDAgBkBwBkCABkAwB8
 AABkCQB8AQCDAAMBeGMAdAYAdAcAdAIAdAIAdAMAZB4AgwIAZAoAgwIAgwAAgwEAgwEARF06AH0I
 AHQCAHwIAGQGAIMCAGQMAGQIAGQNAGYCAGQHAGQQAGQRAGQSAGQDAHwAAGQJAHwBAIMABQFxJQRX
-eC0BdAYAdAIAdAIAdAIAdAMAZB8AgwIAZCAAgwIAgwAAZAoAgwIAZCEAZgEAgwEAgwEARF34AH0J
-AHwDAARkIgB0AgB8CQBkIwCDAgAWAklKdAIAfAkAZCQAgwIAgwAAZCUAZgEAagcAb78AAXQCAHwJ
-AGQGAIMCAGQHAGQIAGQDAHwAAGQJAHwBAIMAAwF4mgB0BgB0BwB0AgB8CQBkCgCDAgCDAACDAQCD
-AQBEXXYAfQgAeTgAdAIAfAgAZAsAgwIAZAwAZAgAZA0AZgIAZAcAZBAAZBEAZBIAZAMAfAAAZAkA
-fAEAgwAFAVdxEQUBAQGCAAB0CgBkJgB0CwB0AgB8CQBkJACDAgCDAACDAQB0CwB8CACDAQBmAgAW
-ggIAcREFWHERBVdxlwQBcZcEV3j0AHQGAHQCAHQCAHQCAHQDAGQfAIMCAGQgAIMCAIMAAGQKAIMC
-AGQhAGYBAIMBAIMBAERdvwB9CQB0AgB8CQBkJACDAgCDAABkJQBmAQBqBgBvnQABfAMABGQiAHQC
-AHwJAGQjAIMCABYCSUp0AgB8CQBkBgCDAgBkBwBkCABkAwB8AABkCQB8AQCDAAMBeGEAdAYAdAcA
-dAIAfAkAZAoAgwIAgwAAgwEAgwEARF09AH0IAHQCAHwIAGQLAIMCAGQMAGQIAGQQAGQNAGYDAGQH
-AGQnAGQRAGQSAGQDAHwAAGQJAHwBAIMABQFxQQZXcccFAXHHBVd0AgB0AgB0AgB0AwBkFACDAgBk
-KACDAgBkDABkJwBkFQBmAgBkEQBkFgCDAAJkKQCDAgBkAwB8AABkCQB8AQCDAAIBfAMAgwAAU2QA
-AFMoKgAAAE5zHwAAACMjIyMgSW5kZXhpbmcgdHJhbnNsYXRpb25zICMjIyNzHwAAAEVSUDVTaXRl
-X3VwZGF0ZVRyYW5zbGF0aW9uVGFibGVzDgAAAHNxbF9jYXRhbG9nX2lkcx0AAAAjIyMjIEluZGV4
-aW5nIGNhdGVnb3JpZXMgIyMjI3MRAAAAcG9ydGFsX2NhdGVnb3JpZXNzDQAAAHJlaW5kZXhPYmpl
-Y3RzAwAAAHRhZ3MGAAAAbW9kdWxlcw4AAABwYXNzaXZlX2NvbW1pdHMMAAAAb2JqZWN0VmFsdWVz
-cxYAAAByZWN1cnNpdmVSZWluZGV4T2JqZWN0cwkAAABhZnRlcl90YWdzCAAAAGNhdGVnb3J5cx4A
-AAAjIyMjIEluZGV4aW5nIHByZWZlcmVuY2VzICMjIyNzEgAAAHBvcnRhbF9wcmVmZXJlbmNlc3MI
-AAAAZG9jdW1lbnRzCAAAAHByaW9yaXR5aQIAAABzHQAAACMjIyMgSW5kZXhpbmcgc2ltdWxhdGlv
-biAjIyMjcxEAAABwb3J0YWxfc2ltdWxhdGlvbnMKAAAAc2ltdWxhdGlvbmkDAAAAcxwAAAAjIyMj
-IEluZGV4aW5nIHRlbXBsYXRlcyAjIyMjcxAAAABwb3J0YWxfdGVtcGxhdGVzcyAAAAAjIyMjIElu
-ZGV4aW5nIGFwcGxpZWQgcnVsZXMgIyMjI3MMAAAAcG9ydGFsX3J1bGVzcyQAAAAjIyMjIEluZGV4
-aW5nIGRlbGl2ZXJ5IGJ1aWxkZXJzICMjIyNzEQAAAHBvcnRhbF9kZWxpdmVyaWVzcyEAAAAjIyMj
-IEluZGV4aW5nIG9yZGVyIGJ1aWxkZXJzICMjIyNzDQAAAHBvcnRhbF9vcmRlcnNzCgAAAHBvcnRh
-bF91cmxzDwAAAGdldFBvcnRhbE9iamVjdHMLAAAARVJQNSBGb2xkZXJzLAAAACMjIyMgSW5kZXhp
-bmcgY29udGVudHMgaW5zaWRlIGZvbGRlciAlcyAjIyMjcwIAAABpZHMFAAAAZ2V0SWRzEAAAAGlu
-dmVudG9yeV9tb2R1bGVzFgAAAGVycm9yOiBmb2xkZXI9JXMsIG89JXNzCQAAAGludmVudG9yeXMI
-AAAAYWN0aXZhdGVzIwAAAEludmVudG9yeU1vZHVsZV9yZWluZGV4TW92ZW1lbnRMaXN0KAwAAABz
-BwAAAF9wcmludF9zBgAAAF9wcmludHMJAAAAX2dldGF0dHJfcwcAAABjb250ZXh0cw4AAABzcWxf
-Y2F0YWxvZ19pZHMOAAAAcGFzc2l2ZV9jb21taXRzCQAAAF9nZXRpdGVyX3MEAAAAbGlzdHMBAAAA
-b3MGAAAAZm9sZGVycwwAAABSdW50aW1lRXJyb3JzBAAAAHJlcHIoDAAAAHMOAAAAc3FsX2NhdGFs
-b2dfaWRzDgAAAHBhc3NpdmVfY29tbWl0cwcAAABfcHJpbnRfcwYAAABfcHJpbnRzCQAAAF9nZXRh
-dHRyX3MHAAAAY29udGV4dHMJAAAAX2dldGl0ZXJfcwQAAABsaXN0cwEAAABvcwYAAABmb2xkZXJz
-DAAAAFJ1bnRpbWVFcnJvcnMEAAAAcmVwcigAAAAAKAAAAABzDwAAAFNjcmlwdCAoUHl0aG9uKXMT
-AAAARVJQNVNpdGVfcmVpbmRleEFsbAEAAABzcgAAABYBEwIQASUBKAAJASkCEAElAS4ACQE1AxAB
-JQEoAAkBOAMQASUBKAAJATUDEAElASgACQE1AxABJQEoAAkBNQMQASUBKAAJATUDNAAGARcBHwEf
-AR8ABgEGATgDAwE7AzQABgEcARoBHwEfAAkBSQM6AigCAAAAcwQAAABOb25lcxMAAABFUlA1U2l0
-ZV9yZWluZGV4QWxsKAIAAABzBAAAAE5vbmVzEwAAAEVSUDVTaXRlX3JlaW5kZXhBbGwoAAAAACgA
-AAAAcw8AAABTY3JpcHQgKFB5dGhvbilzCAAAADxtb2R1bGU+AQAAAHMAAAAA</string> </value>
+fAMABGQfAAJJSnQCAHQCAHQDAGQgAIMCAGQGAIMCAGQHAGQIAGQDAHwAAGQJAHwBAIMAAwF4YwB0
+BgB0BwB0AgB0AgB0AwBkIACDAgBkCgCDAgCDAACDAQCDAQBEXToAfQgAdAIAfAgAZAYAgwIAZAwA
+ZAgAZA0AZgIAZAcAZBAAZBEAZBIAZAMAfAAAZAkAfAEAgwAFAXHABFd4LQF0BgB0AgB0AgB0AgB0
+AwBkIQCDAgBkIgCDAgCDAABkCgCDAgBkIwBmAQCDAQCDAQBEXfgAfQkAfAMABGQkAHQCAHwJAGQl
+AIMCABYCSUp0AgB8CQBkJgCDAgCDAABkJwBmAQBqBwBvvwABdAIAfAkAZAYAgwIAZAcAZAgAZAMA
+fAAAZAkAfAEAgwADAXiaAHQGAHQHAHQCAHwJAGQKAIMCAIMAAIMBAIMBAERddgB9CAB5OAB0AgB8
+CABkCwCDAgBkDABkCABkDQBmAgBkBwBkEABkEQBkEgBkAwB8AABkCQB8AQCDAAUBV3GsBQEBAYIA
+AHQKAGQoAHQLAHQCAHwJAGQmAIMCAIMAAIMBAHQLAHwIAIMBAGYCABaCAgBxrAVYcawFV3EyBQFx
+MgVXePQAdAYAdAIAdAIAdAIAdAMAZCEAgwIAZCIAgwIAgwAAZAoAgwIAZCMAZgEAgwEAgwEARF2/
+AH0JAHQCAHwJAGQmAIMCAIMAAGQnAGYBAGoGAG+dAAF8AwAEZCQAdAIAfAkAZCUAgwIAFgJJSnQC
+AHwJAGQGAIMCAGQHAGQIAGQDAHwAAGQJAHwBAIMAAwF4YQB0BgB0BwB0AgB8CQBkCgCDAgCDAACD
+AQCDAQBEXT0AfQgAdAIAfAgAZAsAgwIAZAwAZAgAZBAAZA0AZgMAZAcAZCkAZBEAZBIAZAMAfAAA
+ZAkAfAEAgwAFAXHcBldxYgYBcWIGV3QCAHQCAHQCAHQDAGQUAIMCAGQqAIMCAGQMAGQpAGQVAGYC
+AGQRAGQWAIMAAmQrAIMCAGQDAHwAAGQJAHwBAIMAAgF8AwCDAABTZAAAUygsAAAATnMfAAAAIyMj
+IyBJbmRleGluZyB0cmFuc2xhdGlvbnMgIyMjI3MfAAAARVJQNVNpdGVfdXBkYXRlVHJhbnNsYXRp
+b25UYWJsZXMOAAAAc3FsX2NhdGFsb2dfaWRzHQAAACMjIyMgSW5kZXhpbmcgY2F0ZWdvcmllcyAj
+IyMjcxEAAABwb3J0YWxfY2F0ZWdvcmllc3MNAAAAcmVpbmRleE9iamVjdHMDAAAAdGFncwYAAABt
+b2R1bGVzDgAAAHBhc3NpdmVfY29tbWl0cwwAAABvYmplY3RWYWx1ZXNzFgAAAHJlY3Vyc2l2ZVJl
+aW5kZXhPYmplY3RzCQAAAGFmdGVyX3RhZ3MIAAAAY2F0ZWdvcnlzHgAAACMjIyMgSW5kZXhpbmcg
+cHJlZmVyZW5jZXMgIyMjI3MSAAAAcG9ydGFsX3ByZWZlcmVuY2VzcwgAAABkb2N1bWVudHMIAAAA
+cHJpb3JpdHlpAgAAAHMdAAAAIyMjIyBJbmRleGluZyBzaW11bGF0aW9uICMjIyNzEQAAAHBvcnRh
+bF9zaW11bGF0aW9ucwoAAABzaW11bGF0aW9uaQMAAABzHAAAACMjIyMgSW5kZXhpbmcgdGVtcGxh
+dGVzICMjIyNzEAAAAHBvcnRhbF90ZW1wbGF0ZXNzHQAAACMjIyMgSW5kZXhpbmcgdHJhc2ggYmlu
+cyAjIyMjcwwAAABwb3J0YWxfdHJhc2hzIAAAACMjIyMgSW5kZXhpbmcgYXBwbGllZCBydWxlcyAj
+IyMjcwwAAABwb3J0YWxfcnVsZXNzJAAAACMjIyMgSW5kZXhpbmcgZGVsaXZlcnkgYnVpbGRlcnMg
+IyMjI3MRAAAAcG9ydGFsX2RlbGl2ZXJpZXNzIQAAACMjIyMgSW5kZXhpbmcgb3JkZXIgYnVpbGRl
+cnMgIyMjI3MNAAAAcG9ydGFsX29yZGVyc3MKAAAAcG9ydGFsX3VybHMPAAAAZ2V0UG9ydGFsT2Jq
+ZWN0cwsAAABFUlA1IEZvbGRlcnMsAAAAIyMjIyBJbmRleGluZyBjb250ZW50cyBpbnNpZGUgZm9s
+ZGVyICVzICMjIyNzAgAAAGlkcwUAAABnZXRJZHMQAAAAaW52ZW50b3J5X21vZHVsZXMWAAAAZXJy
+b3I6IGZvbGRlcj0lcywgbz0lc3MJAAAAaW52ZW50b3J5cwgAAABhY3RpdmF0ZXMjAAAASW52ZW50
+b3J5TW9kdWxlX3JlaW5kZXhNb3ZlbWVudExpc3QoDAAAAHMHAAAAX3ByaW50X3MGAAAAX3ByaW50
+cwkAAABfZ2V0YXR0cl9zBwAAAGNvbnRleHRzDgAAAHNxbF9jYXRhbG9nX2lkcw4AAABwYXNzaXZl
+X2NvbW1pdHMJAAAAX2dldGl0ZXJfcwQAAABsaXN0cwEAAABvcwYAAABmb2xkZXJzDAAAAFJ1bnRp
+bWVFcnJvcnMEAAAAcmVwcigMAAAAcw4AAABzcWxfY2F0YWxvZ19pZHMOAAAAcGFzc2l2ZV9jb21t
+aXRzBwAAAF9wcmludF9zBgAAAF9wcmludHMJAAAAX2dldGF0dHJfcwcAAABjb250ZXh0cwkAAABf
+Z2V0aXRlcl9zBAAAAGxpc3RzAQAAAG9zBgAAAGZvbGRlcnMMAAAAUnVudGltZUVycm9ycwQAAABy
+ZXByKAAAAAAoAAAAAHMPAAAAU2NyaXB0IChQeXRob24pcxMAAABFUlA1U2l0ZV9yZWluZGV4QWxs
+AQAAAHN8AAAAFgETAhABJQEoAAkBKQIQASUBLgAJATUDEAElASgACQE4AxABJQEoAAkBNQMQASUB
+KAAJATUDEAElASgACQE1AxABJQEoAAkBNQMQASUBKAAJATUDNAAGARcBHwEfAR8ABgEGATgDAwE7
+AzQABgEcARoBHwEfAAkBSQM6AigCAAAAcwQAAABOb25lcxMAAABFUlA1U2l0ZV9yZWluZGV4QWxs
+KAIAAABzBAAAAE5vbmVzEwAAAEVSUDVTaXRlX3JlaW5kZXhBbGwoAAAAACgAAAAAcw8AAABTY3Jp
+cHQgKFB5dGhvbilzCAAAADxtb2R1bGU+AQAAAHMAAAAA</string> </value>
         </item>
         <item>
             <key> <string>_filepath</string> </key>
